syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/anton0701/chat-server/grpc/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateChatRequest {
  repeated int64 user_IDs = 1;
  string chat_name = 2;
  google.protobuf.StringValue chat_description = 3;
}

message CreateChatResponse {
  int64 ID = 1;
}

message DeleteChatRequest {
  int64 ID = 1;
}

message SendMessageRequest {
  int64 user_ID_from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
  int64 chat_ID = 4;
}